--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -28,3 +28,22 @@ keywords={feature extraction;image classification;image representation;learning 
 doi={10.1109/CVPR.2001.990517},
 ISSN={1063-6919},
 month={},}
+
+@INPROCEEDINGS{lbp,
+    author={T. Ojala and M. Pietikainen and D. Harwood},
+    booktitle={Pattern Recognition, 1994. Vol. 1 - Conference A: Computer Vision
+        amp; Image Processing., Proceedings of the 12th IAPR International
+            Conference on},
+    title={Performance evaluation of texture measures with classification based
+        on Kullback discrimination of distributions},
+    year={1994},
+    volume={1},
+    pages={582-585 vol.1},
+    keywords={image texture;Kullback discrimination;classification;complementary
+        features;one-dimensional feature value distributions;performance
+            evaluation;texture measures;Analysis of
+            variance;Autocorrelation;Automation;Distributed computing;Electric
+            variables measurement;Histograms;Image texture analysis;Performance
+            evaluation;Prototypes;Rotation measurement},
+    doi={10.1109/ICPR.1994.576366},
+    month={Oct},}
