--- a/report/src.tex
+++ b/report/src.tex
@@ -19,9 +19,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,french]{babel}
 \usepackage[babel=true,kerning=true]{microtype}
-\usepackage[urw-garamond]{mathdesign}
-\usepackage{garamondx}
-\usepackage[scaled]{beramono}
+%\usepackage[urw-garamond]{mathdesign}
+%\usepackage{garamondx}
+%\usepackage[scaled]{beramono}
 %\usepackage{titlesec}
 %\titleformat{\section}[hang]{\normalfont\scshape\filcenter}{\thesection.}{1em}{}
 %\renewcommand{\thesection}{\Roman{section}}
@@ -57,7 +57,7 @@
 \selectlanguage{english}
 
 \title{
-    MB-LBP Face Detection with Gentle Adaboost
+    Boosted Multi-block LBP Face Detection
 }
 
 \author{
